--- a/notes/4. Classes.md
+++ b/notes/4. Classes.md
@@ -129,3 +129,7 @@ If you are planning to create a new method, you can write the implementation of 
 ```cs
 Book.newMethod();   //Write this, the hit Ctrl+.
 ```
+
+### Typing conventions re: case
+
+C# is case sensitive.  The convention is to name public members with a capital letter and private members with a lower case first letter.
