--- a/notes/5. Testing.md
+++ b/notes/5. Testing.md
@@ -33,3 +33,14 @@ dotnet test
 ### An aid in refactoring decisions
 
 One argument for unit testing is that it helps you make good design decisions, and refactor things where appropriate in order to get sensible results from the tests.
+
+## Some useful xUnit Assert methods
+
+```cs
+Assert.Same(objectName1, objectName2);
+```
+This will be true if the object references point to the same object.  Another of doing this would be to use the dotnet method:
+```cs
+Assert.True(Oject.ReferenceEquals(objectName1, objectName2));
+```
+
