user input + basic error checking

--- a/notes/6. Reference Types vs Value Types.md
+++ b/notes/6. Reference Types vs Value Types.md
@@ -50,3 +50,7 @@ The `out` keyword also passess by reference, but with `out` the compiler assumes
 ## Identifying a type with VS Code
 
 When your cursor is on the keyword for a variable type e.g. `int`, you can press F12 to see the metadata for that type. If it's a **struct**, it's a **value** type and if it's a **class** it's a **reference** type.
+
+> The exception to this rule is string, which is that although it is a class (and is therefore a reference type) it often behaves like a value type.
+
+Essentially strings are immutable (can't be changed).  So when you invoke a string method (such as `stringVarName.ToUpper`) that will return a *copy* of the string with the changes applied, rather than changing the underlying value, which is more similar to a value type.
