tidied up main and improved input checking

--- a/notes/4. Classes.md
+++ b/notes/4. Classes.md
@@ -133,3 +133,97 @@ Book.newMethod();   //Write this, the hit Ctrl+.
 ### Typing conventions re: case
 
 C# is case sensitive.  The convention is to name public members with a capital letter and private members with a lower case first letter.
+
+
+# Building Types
+
+### Method overloading
+
+You can use the same name for multiple methods as long as the 'signature' of the methods are different.  The 'signature' includes the parameters but not the return type.  This just means you can't write two methods with the same name and same input parameters but different return types.  This makes sense, because the compiler wouldn't know which method was being called, as the calling and inputs would be identical.
+
+However, if you wanted to allow the user to input either a numerical grade or a letter value, you could overload the method by writing the following:
+
+```cs
+public void AddGrade(char letter)
+{   
+    double grade;
+    switch(letter)
+    {
+        case 'A':
+            grade = 90;
+            break;
+        case 'B':
+            grade = 80;
+            break;
+        case 'C':
+            grade = 70;
+            break;
+        case 'D':
+            grade = 60;
+            break;
+        case 'E':
+            grade = 50;
+            break;
+        default:
+            grade = 40;
+            break;
+    }
+    AddGrade(grade);
+}
+
+public void AddGrade(double grade)
+{
+    Console.WriteLine(grade);
+}
+```
+
+
+### Properties
+
+These are the same as vba, but with better syntax.  Here is the basic version:
+
+```cs
+
+private string name;
+
+public string Name
+{
+    get
+    {
+        return name;
+    }
+    set
+    {
+        if(!String.IsNullOrEmpty(value))
+        {
+            name = value;
+        }
+    }
+}
+```
+
+The key things to remember here are that the keyword value is implicit.  It's not physically shown in the code, but it represents whatever value was passed to the property input.
+
+### Auto-property
+
+If all you want to do is get the value of the variable and set the value of the variable, you can write a vert short-hand bit of syntax called an auto-property.
+
+```cs
+public string Name
+{
+    get; set;
+}
+```
+
+With this, you don't even have to write the underlying private variable.  In a lot of cases, this isn't any different but in some cases in dotnet uses properties and public variables differently.  Probably don't need to worry about it.  One time where you can use it is if you want to make, for tinstance, the `set` private:
+
+```cs
+public string Name
+{
+    get; 
+    private set;
+}
+```
+
+Under this use case, the user can get the value of the variable, but can't overwrite it (perhaps you want to force the user to call a class methods to write the variable).
+
