notes and practice code for delegates

--- a/notes/4. Classes.md
+++ b/notes/4. Classes.md
@@ -4,7 +4,7 @@ We know the rules by now, you have class *fields* which are the variables and ar
 
 You should build each class with the namespace of your program *?! I think ?!*
 
-If you create a new class file (.cs) in the project folder, it will immediately be available to other .cs files in the folder. *?! I think ?!*
+If you create a new class file (.cs) in the project folder, it will immediately be available to other .cs files in the folder, if the class is within the same namespace. *?! I think ?!*
 
 Each class should be its own file with the name of the file as the name of the class. (Good practice)
 
@@ -215,7 +215,14 @@ public string Name
 }
 ```
 
-With this, you don't even have to write the underlying private variable.  In a lot of cases, this isn't any different but in some cases in dotnet uses properties and public variables differently.  Probably don't need to worry about it.  One time where you can use it is if you want to make, for tinstance, the `set` private:
+With this, you don't even have to write the underlying private variable.  In a lot of cases, this isn't any different but in some cases in dotnet uses properties and public variables differently.  Probably don't need to worry about it.  
+
+
+## Read-only members
+
+### Read-only properties
+
+One time where you can use the above property syntax is for a read-only property a.k.a. if you want to make the `set` private:
 
 ```cs
 public string Name
@@ -227,3 +234,44 @@ public string Name
 
 Under this use case, the user can get the value of the variable, but can't overwrite it (perhaps you want to force the user to call a class methods to write the variable).
 
+
+### The readonly keyword
+
+One way you can make read-only members is to use the `readonly` keyword:
+
+```cs
+class Film
+{
+    readonly string genre = "Western";
+
+    public Film();
+    {
+        genre = "Science Fiction";
+    }    
+}
+```
+
+A readonly member variable like this can only be written to when it is initialized, or in the class constructor.  You will get a complier error if you try to write to it at any other time.
+
+### The const keyword
+
+Constants are similar, except it can *only* be written to at initialization.
+
+```cs
+class Film
+{
+    const string GENRE = "Western";
+}
+```
+
+Constants can also be `public` or `private`.  When consts are public, there is no need to wrap them in a property as they can never be changed and can be used safely publicly.
+
+> A common convention is to write constant variable names in ALLUPPERCASE. This is just potentially useful.
+
+Public constants are referenced outside the class in same way as static methods. So if you have the `Book` class and the object instance `book1`, you would access the constant variable with:
+
+```cs
+string g = Book.GENRE;  //Correct
+//NOT
+string g = book1.GENRE;  //Incorrect
+```
